Fjern dp-soknad fra config og alle kall til de
